--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <h2>Наша команда</h2>
         <ul class="section-employee__line">
             <li class="section-employee__list">
-                <picture class="section-employee__picture">
+                <picture>
                     <source
                     srcset="
                     ./images/employee/employe-1-x1.jpg 1x,
