--- a/portfolio.html
+++ b/portfolio.html
@@ -124,8 +124,8 @@
                         <source srcset="
                         ./images/portfolio-mob/portfolio-mob1-x1.jpg 1x,
                         ./images/portfolio-mob/portfolio-mob1-x2.jpg 2x
-                        " media="(min-width:320px)" />
-                        <img src="./images/portfolio-desk/portfolio1-x1.jpg" alt="фото">
+                        " media="(min-width:480px)" />
+                        <img src="./images/portfolio-desk/portfolio1-x1.jpg" alt="фото" class="small-picture">
                     </picture>
                     <p class="content-line__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.
@@ -150,8 +150,8 @@
                 <source srcset="
                 ./images/portfolio-mob/portfolio-mob2-x1.jpg 1x,
                 ./images/portfolio-mob/portfolio-mob2-x2.jpg 2x
-                " media="(min-width:320px)" />
-                <img src="./images/portfolio-desk/portfolio2-x1.jpg" alt="фото">
+                " media="(min-width:480px)" />
+                <img src="./images/portfolio-desk/portfolio2-x1.jpg" alt="фото" class="small-picture">
             </picture>
                     <p class="content-line__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.
@@ -176,8 +176,8 @@
             <source srcset="
         ./images/portfolio-mob/portfolio-mob3-x1.jpg 1x,
         ./images/portfolio-mob/portfolio-mob3-x2.jpg 2x
-        " media="(min-width:320px)" />
-            <img src="./images/portfolio-desk/portfolio3-x1.jpg" alt="фото">
+        " media="(min-width:480px)" />
+            <img src="./images/portfolio-desk/portfolio3-x1.jpg" alt="фото" class="small-picture">
         </picture>
                 <p class="content-line__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.
@@ -202,8 +202,8 @@
     <source srcset="
                         ./images/portfolio-mob/portfolio-mob4-x1.jpg 1x,
                         ./images/portfolio-mob/portfolio-mob4-x2.jpg 2x
-                        " media="(min-width:320px)" />
-    <img src="./images/portfolio-desk/portfolio4-x1.jpg" alt="фото">
+                        " media="(min-width:480px)" />
+    <img src="./images/portfolio-desk/portfolio4-x1.jpg" alt="фото" class="small-picture">
 </picture>
                         <p class="content-line__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.
@@ -228,8 +228,8 @@
     <source srcset="
                         ./images/portfolio-mob/portfolio-mob5-x1.jpg 1x,
                         ./images/portfolio-mob/portfolio-mob5-x2.jpg 2x
-                        " media="(min-width:320px)" />
-    <img src="./images/portfolio-desk/portfolio5-x1.jpg" alt="фото">
+                        " media="(min-width:480px)" />
+    <img src="./images/portfolio-desk/portfolio5-x1.jpg" alt="фото" class="small-picture">
 </picture>
                 <p class="content-line__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.
@@ -254,8 +254,8 @@
     <source srcset="
                         ./images/portfolio-mob/portfolio-mob6-x1.jpg 1x,
                         ./images/portfolio-mob/portfolio-mob6-x2.jpg 2x
-                        " media="(min-width:320px)" />
-    <img src="./images/portfolio-desk/portfolio6-x1.jpg" alt="фото">
+                        " media="(min-width:480px)" />
+    <img src="./images/portfolio-desk/portfolio6-x1.jpg" alt="фото" class="small-picture">
 </picture>
                 <p class="content-line__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.
@@ -280,8 +280,8 @@
     <source srcset="
                         ./images/portfolio-mob/portfolio-mob7-x1.jpg 1x,
                         ./images/portfolio-mob/portfolio-mob7-x2.jpg 2x
-                        " media="(min-width:320px)" />
-    <img src="./images/portfolio-desk/portfolio7-x1.jpg" alt="фото">
+                        " media="(min-width:480px)" />
+    <img src="./images/portfolio-desk/portfolio7-x1.jpg" alt="фото" class="small-picture">
 </picture>
                     <p class="content-line__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.
@@ -306,8 +306,8 @@
     <source srcset="
                         ./images/portfolio-mob/portfolio-mob8-x1.jpg 1x,
                         ./images/portfolio-mob/portfolio-mob8-x2.jpg 2x
-                        " media="(min-width:320px)" />
-    <img src="./images/portfolio-desk/portfolio8-x1.jpg" alt="фото">
+                        " media="(min-width:480px)" />
+    <img src="./images/portfolio-desk/portfolio8-x1.jpg" alt="фото" class="small-picture">
 </picture>
                     <p class="content-line__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.
@@ -332,8 +332,9 @@
     <source srcset="
                         ./images/portfolio-mob/portfolio-mob9-x1.jpg 1x,
                         ./images/portfolio-mob/portfolio-mob9-x2.jpg 2x
-                        " media="(min-width:320px)" />
-    <img src="./images/portfolio-desk/portfolio9-x1.jpg" alt="фото">
+                         
+                        " media="(min-width:480px)"  />
+    <img src="./images/portfolio-desk/portfolio9-x1.jpg" alt="фото" class="small-picture">
 </picture>
                     <p class="content-line__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.
